# qgibbs-avx

./: .cproject  .gitignore  .project  CMakeLists.txt  FindBLAS2.cmake  FindCHOLMOD.cmake  FindLibraryList.cmake  Makefile  README  cholmod_logdet.c  cholmod_test.c  cluster.f90  clustergs.f90  dimer.f90  gaussian_average_acc.c  gaussian_average_avx.c  gaussian_average_avx.h  gaussian_average_fma4.h  gaussian_average_sse4_1.h  gibbs.tmproj  gibbs3.f90  gibbs3h.f90  gibbs4.f90  gmx_math_x86_avx_256_fma4_single.h  gmx_math_x86_avx_256_single.h  gmx_math_x86_sse4_1_single.h  index_sort.c  interaction_lists.f90  mccluster.f90  mvgwmodeffpot.f90  pairint.f90  pimc.f90  pimcsc.f90  pinvdetinv.c  potential_energy.f90  qgibbs.f90  qsort_test.f90  rhss0.f90  rhssfm.f90  rhssspfm.f90  (+17 more)
cholmod_test.xcodeproj/: project.pbxproj
cmake/: FindBLAS2.cmake
config/: blas.mk  gcc.mk  intel.mk  pgi.mk
tests/: speedup.txt
